<resources>
    <string name="app_name">Racikom</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_simulation">Simulation</string>
    <string name="title_marketplace">Marketplace</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

        <string name="rv">RecyclerViewFragmentJYT</string>

        <string name="news_c">Intel 13th-Gen Raptor Lake processors will bring more cores, more connectivity, a revamped core architecture, support for PCIe 5.0 SSDs, and even an officially-verified 6.0 GHz peak boost clock to bear. </string>
        <string name="news_d">The Intel Arc A770 graphics card has finally arrived, along with its little brother, the Intel Arc A750. After a rather disappointing Arc A380 review last month, Intel has a lot to prove with the bigger and far more potent A770. </string>
    <string name="news_e">We track current GPU prices on all the best graphics cards and the latest additions to our GPU benchmarks hierarchy. We scrape eBay sales data to get details on what sort of prices people are paying for GPUs.  </string>
    <string name="news_f">The arrival of Zen 4 CPUs signifies a tectonic shift in the home computing landscape. The 7000-series brings not only generational uplift that ranges from excellent to staggering, it introduces a host of new technologies for AMD lovers to put them on equal footing with Alder and Raptor Lake users. </string>
    <string name="news_g">If you on the hunt for the best DDR5 RAM to pair with your shiny new Intel 12th Gen system, you come to the right place. We tested many DDR5 memory kits over the last few months ourselves and we picked out the top kits, at different price points, to suit systems at any price point. </string>
    <string name="news_h">1440p gaming might seem impossible on a budget, but the Corsair Vengeance a7200 is a fantastic, albeit limited, deal we could find for $1,649. This gaming PC comes fully loaded with an AMD Ryzen 5 5600X and Nvidia RTX 3060 Ti to make your QHD gaming dreams a reality. </string>

        <string name="head_3">Intel 13th gen Series</string>
        <string name="head_4">Intel Arc A770 Limited Edition</string>
    <string name="head_5">GPU Prices 2022: October Update</string>
    <string name="head_6">Best Motherboard AM5</string>
    <string name="head_7">Recommendation DDR5 RAM</string>
    <string name="head_8">Best Budget PC for 1440p Gaming</string>
    <string name="proc">Select Processor</string>
    <string name="mobo">Select Motherboard</string>
    <string name="ram">Select RAM</string>
    <string name="casing">Select Casing</string>
    <string name="hdd">Select Harddisk</string>
    <string name="ssd">Select SSD</string>
    <string name="vga">Select VGA</string>
    <string name="psu">Select PSU</string>
    <string name="moni">Select Monitor</string>
    <string name="cpu">Select CPU Cooler</string>
    <string name="cooler">Select Cooler Fan</string>


    <string-array name="proc">
        <item>Select Processor..</item>
        <item>Ryzen 9 7950X – 16 cores, 32 threads, 5.7GHz max clock speed, 80Mb cache, 170W TDP</item>
        <item>Ryzen 9 7900X – 12 cores, 24 threads, 5.6GHz max clock speed, 76Mb cache, 170W TDP</item>
        <item>Ryzen 7 7700X – 8 cores, 16 threads, 5.4GHz max clock speed, 40Mb cache, 105W TDP</item>
        <item>Ryzen 5 7600X – 6 cores, 12 threads, 5.3GHz max clock speed, 38Mb cache, 105W TDP</item>
    </string-array>
    
    <string-array name="mobo">
        <item>Select Motherboard..</item>
        <item>ASRock X670E Taichi </item>
        <item>ASUS ROG CROSSHAIR X670E EXTREME </item>
        <item>BIOSTAR X670E VALKYRIE </item>
        <item>GIGABYTE X670E AORUS XTREME </item>
        <item>MSI MEG X670E ACE </item>
    </string-array>

    <string-array name="ram">
        <item>Select RAM..</item>
        <item>Corsair Dominator Platinum RGB DDR5 </item>
        <item>G.Skill Trident Z RGB DDR5 </item>
        <item>Corsair Vengeance DDR5 </item>
        <item>GeIL Polaris RGB DDR5 </item>
        <item>Crucial DDR5 4800Mhz </item>
    </string-array>

    <string-array name="casing">
        <item>Select Case..</item>
        <item>Cooler Master Cosmos C700M</item>
        <item>Corsair Carbide 275R</item>
        <item>NZXT H1 V2</item>
        <item>Phanteks Evolv X</item>
        <item>Corsair iCUE 5000T RGB</item>
        <item>Cooler Master Silencio S600</item>
    </string-array>

    <string-array name="hdd">
        <item>Select Harddisk..</item>
        <item>Seagate BarraCuda</item>
        <item>Western Digital Blue Desktop</item>
        <item>Toshiba X300</item>
        <item>WD VelociRaptor</item>
        <item>Seagate Firecuda Desktop</item>
        <item>Seagate IronWolf NAS</item>
    </string-array>

    <string-array name="ssd">
        <item>Select SSD..</item>
        <item>WD Black SN850X NVMe SSD</item>
        <item>SK Hynix Platinum P41</item>
        <item>Samsung SSD 980 Pro</item>
        <item>ADATA XPG Atom 50</item>
        <item>HP FX900 PCIe 4.0 M.2 SSD</item>
    </string-array>

    <string-array name="vga">
        <item>Select VGA..</item>
        <item>EVGA RTX 3060 XC Black</item>
        <item>Nvidia GeForce RTX 3080 Ti Founders Edition</item>
        <item>XFX Speedster SWFT319 AMD Radeon RX 6800</item>
        <item>Asus TUF Gaming RTX 3070</item>
        <item>MSI Gaming Radeon RX 6800 XT</item>
        <item>MSI RTX 3080 Gaming X Trio</item>
    </string-array>

    <string-array name="psu">
        <item>Select PSU..</item>
        <item>Corsair RM750x (2021)</item>
        <item>Seasonic Prime Titanium TX-1000</item>
        <item>XPG Pylon 450</item>
        <item>BeQuiet! Pure Power 11 FM 550W</item>
        <item>SilverStone SX1000 Platinum</item>
    </string-array>

    <string-array name="monitor">
        <item>Select Monitor..</item>
        <item>Alienware 34 QD-OLED (AW3423DW)</item>
        <item>LG 27GN950-B</item>
        <item>Gigabyte G27Q</item>
        <item>MSI Oculux NXG253R</item>
        <item>Acer Predator X38</item>
        <item>Samsung Odyssey Neo G9</item>
    </string-array>

    <string-array name="cpu">
        <item>Select CPU Cooler..</item>
        <item>Corsair iCUE H150i Elite Capellix</item>
        <item>Arctic Liquid Freezer II 280 A-RGB</item>
        <item>Noctua NH-U14S</item>
        <item>Be quiet! Pure Loop 240mm</item>
    </string-array>

    <string-array name="cooler">
        <item>Select Fan Cooler..</item>
        <item>Noctua NF-S12B redux-1200</item>
        <item>Corsair LL120 RGB</item>
        <item>Cooler Master MF120R A-RGB</item>
        <item>Thermaltake Toughfan 12 Turbo</item>
        <item>Noctua NF-A12x25 PWM</item>
    </string-array>

</resources>