<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <ImageView
        android:id="@+id/navbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002"
        app:srcCompat="@drawable/navbar" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:layout_below="@id/navbar"
        android:text="- Create Your Dream PC Here -" />

    <TextView
        android:id="@+id/processor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome"
        android:layout_marginTop="19dp"
        android:padding="6dp"
        android:layout_marginStart="10dp"
        android:text="@string/proc"
        />

    <Spinner
        android:id="@+id/proc_menu"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome"
        android:layout_alignEnd="@id/processor"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:entries="@array/proc"
        android:minHeight="48dp" />


    <TextView
        android:id="@+id/mobo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/processor"
        android:layout_marginTop="19dp"
        android:padding="6dp"
        android:layout_marginStart="10dp"
        android:text="@string/mobo"
        />

    <Spinner
        android:id="@+id/mobo_menu"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/processor"
        android:layout_alignEnd="@id/mobo"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:entries="@array/mobo"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/ram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mobo"
        android:layout_marginTop="19dp"
        android:padding="6dp"
        android:layout_marginStart="10dp"
        android:text="@string/ram"
        />

    <Spinner
        android:id="@+id/ram_menu"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/mobo"
        android:layout_alignEnd="@id/ram"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:entries="@array/ram"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/casing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ram"
        android:layout_marginTop="19dp"
        android:padding="6dp"
        android:layout_marginStart="10dp"
        android:text="@string/casing"
        />

    <Spinner
        android:id="@+id/casing_menu"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ram"
        android:layout_alignEnd="@id/casing"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:entries="@array/casing"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/hdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/casing"
        android:layout_marginTop="19dp"
        android:padding="6dp"
        android:layout_marginStart="10dp"
        android:text="@string/hdd"
        />

    <Spinner
        android:id="@+id/hdd_menu"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/casing"
        android:layout_alignEnd="@id/mobo"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:entries="@array/hdd"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/ssd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hdd"
        android:layout_marginTop="19dp"
        android:padding="6dp"
        android:layout_marginStart="10dp"
        android:text="@string/ssd"
        />

    <Spinner
        android:id="@+id/ssd_menu"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/hdd"
        android:layout_alignEnd="@id/ssd"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:entries="@array/ssd"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/vga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ssd"
        android:layout_marginTop="19dp"
        android:padding="6dp"
        android:layout_marginStart="10dp"
        android:text="@string/vga"
        />

    <Spinner
        android:id="@+id/vga_menu"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ssd"
        android:layout_alignEnd="@id/vga"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:entries="@array/vga"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/psu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/vga"
        android:layout_marginTop="19dp"
        android:padding="6dp"
        android:layout_marginStart="10dp"
        android:text="@string/psu"
        />

    <Spinner
        android:id="@+id/psu_menu"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/vga"
        android:layout_alignEnd="@id/psu"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:entries="@array/psu"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/moni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/psu"
        android:layout_marginTop="19dp"
        android:padding="6dp"
        android:layout_marginStart="10dp"
        android:text="@string/moni"
        />

    <Spinner
        android:id="@+id/moni_menu"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/psu"
        android:layout_alignEnd="@id/moni"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:entries="@array/monitor"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/cpu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/moni"
        android:layout_marginTop="19dp"
        android:padding="6dp"
        android:layout_marginStart="10dp"
        android:text="@string/cpu"
        />

    <Spinner
        android:id="@+id/cpu_menu"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/moni"
        android:layout_alignEnd="@id/cpu"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:entries="@array/cpu"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/cool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cpu"
        android:layout_marginTop="19dp"
        android:padding="6dp"
        android:layout_marginStart="10dp"
        android:text="@string/cooler"
        />

    <Spinner
        android:id="@+id/cool_menu"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/cpu"
        android:layout_alignEnd="@id/mobo"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:entries="@array/cooler"
        android:minHeight="48dp" />
</RelativeLayout>